tests/fixtures/errors/missing-scoped-package/src/index.js
// This file imports a missing scoped package to trigger scoped package parsing
const missing = require('@babel/runtime/helpers/typeof')
module.exports = { missing }
